# my_ops

./: LICENSE  README.md  blacklist.txt  classify_rule.yaml
docs/: ApplyRotaryPosEmb.md  DequantRopeQuantKvcache.md  FlashAttentionScoreGradV2.md  FusedInferAttentionScore.md  FusedInferAttentionScoreV2.md  GroupedBiasAddGrad.md  GroupedMatmul.md  GroupedMatmulAdd.md  GroupedMatmulV2.md  GroupedMatmulV3.md  GroupedMatmulV4.md  MatmulReduceScatter.md  MoeComputeExpertTokens.md  MoeFinalizeRouting.md  MoeFinalizeRoutingV2.md  MoeFinalizeRoutingV2Grad.md  MoeGatingTopKSoftmax.md  MoeGatingTopKSoftmaxV2.md  MoeInitRouting.md  MoeInitRoutingQuant.md  MoeInitRoutingQuantV2.md  MoeInitRoutingV2.md  MoeTokenPermute.md  MoeTokenUnpermute.md  MoeTokenUnpermuteGrad.md  PromptFlashAttention.md  PromptFlashAttentionV2.md  PromptFlashAttentionV3.md  RingAttentionUpdate.md  ScaledMaskedSoftmax.md  ScaledMaskedSoftmaxGrad.md  Sinkhorn.md  SwinAttentionScoreQuant.md  SwinTransformerLnQkvQuant.md
docs/common/: GroupedMatmul算子设计介绍.md
examples/: CMakeLists.txt
examples/mc2/: CMakeLists.txt
examples/mc2/all_gather_matmul/: CMakeLists.txt
examples/mc2/matmul_reduce_scatter/: CMakeLists.txt
examples/mc2/moe_distribute_combine/: CMakeLists.txt  test_moe_distribute_combine.cpp
examples/mc2/moe_distribute_dispatch/: CMakeLists.txt  test_moe_distribute_dispatch.cpp
examples/transformer/: CMakeLists.txt
examples/transformer/apply_rotary_pos_emb/: CMakeLists.txt
examples/transformer/dequant_rope_quant_kvcache/: CMakeLists.txt
examples/transformer/grouped_bias_add_grad/: CMakeLists.txt
examples/transformer/grouped_matmul/: CMakeLists.txt
examples/transformer/grouped_matmul_add/: CMakeLists.txt
examples/transformer/moe_compute_expert_tokens/: CMakeLists.txt
examples/transformer/moe_finalize_routing/: CMakeLists.txt
examples/transformer/moe_finalize_routing_v2/: CMakeLists.txt
examples/transformer/moe_finalize_routing_v2_grad/: CMakeLists.txt
examples/transformer/moe_gating_top_k_softmax/: CMakeLists.txt
examples/transformer/moe_gating_top_k_softmax_v2/: CMakeLists.txt
examples/transformer/moe_init_routing/: CMakeLists.txt
examples/transformer/moe_init_routing_quant/: CMakeLists.txt
examples/transformer/moe_init_routing_quant_v2/: CMakeLists.txt
examples/transformer/moe_init_routing_v2/: CMakeLists.txt
examples/transformer/moe_token_permute/: CMakeLists.txt
examples/transformer/moe_token_unpermute_grad/: CMakeLists.txt
examples/transformer/sinkhorn/: CMakeLists.txt
examples/transformer/swin_attention_score_quant/: CMakeLists.txt
examples/transformer/swin_transformer_ln_qkv_quant/: CMakeLists.txt
src/mc2/all_gather_matmul/ophost/: CMakeLists.txt  aclnn_all_gather_matmul.cpp  all_gather_matmul_tiling.cpp  fallback_all_gather_matmul.cpp
src/mc2/common/: batch_mat_mul_nd2nz.h  mat_mul_nd2nz.h  mc2_nd_to_nz.h
src/mc2/common/ophost/: CMakeLists.txt  hccl_formulaic_tiling.cpp  hccl_performance.cpp  matmul_formulaic_tiling.cpp  matmul_formulaic_tiling.h  matmul_performance.cpp  mc2_tiling_utils.cpp  op_util.h
src/mc2/matmul_reduce_scatter/: matmul_reduce_scatter.cpp  matmul_reduce_scatter_base.h  matmul_reduce_scatter_nd_to_nz.h
src/mc2/matmul_reduce_scatter/ophost/: CMakeLists.txt  aclnn_matmul_reduce_scatter.cpp  aclnn_matmul_reduce_scatter.h  fallback_matmul_reduce_scatter.cpp  matmul_reduce_scatter_def.cpp  matmul_reduce_scatter_gen_task.cpp  matmul_reduce_scatter_tiling.cpp  reduce_scatter_formulaic_tiling.cpp
src/mc2/moe_distribute_combine/: moe_distribute_combine.cpp  moe_distribute_combine_a2_layered.h
src/mc2/moe_distribute_combine/ophost/: CMakeLists.txt  moe_distribute_combine_tiling.cpp
src/mc2/moe_distribute_dispatch/: moe_distribute_dispatch.cpp  moe_distribute_dispatch_a2_layered.h
src/mc2/moe_distribute_dispatch/ophost/: CMakeLists.txt  fallback_moe_distribute_dispatch.cpp  moe_distribute_dispatch_tiling.cpp
src/transformer/apply_rotary_pos_emb/ophost/: CMakeLists.txt
src/transformer/dequant_rope_quant_kvcache/ophost/: CMakeLists.txt  dequant_rope_quant_kvcache_tiling.cpp
src/transformer/grouped_bias_add_grad/ophost/: CMakeLists.txt  aclnn_grouped_bias_add_grad.cpp  grouped_bias_add_grad_infer.cc
src/transformer/grouped_matmul/ophost/: aclnn_grouped_matmul.cpp  grouped_matmul_proto.cpp  grouped_matmul_tiling.cpp
src/transformer/grouped_matmul_add/ophost/: CMakeLists.txt  grouped_matmul_add_def.cpp
src/transformer/incre_flash_attention/ophost/: incre_flash_attention_tiling.cc
src/transformer/moe_compute_expert_tokens/ophost/: CMakeLists.txt
src/transformer/moe_finalize_routing_v2/ophost/: moe_finalize_routing_v2_def.cpp  moe_finalize_routing_v2_tiling.cpp
src/transformer/moe_finalize_routing_v2_grad/ophost/: CMakeLists.txt  moe_finalize_routing_v2_grad_infer.cc
src/transformer/moe_gating_top_k_softmax/: moe_gating_top_k_softmax_k_fullload.h
src/transformer/moe_gating_top_k_softmax/ophost/: CMakeLists.txt
src/transformer/moe_gating_top_k_softmax_v2/: moe_gating_top_k_softmax_v2_k_fullload.h  moe_gating_top_k_softmax_v2_k_renorm.h
src/transformer/moe_init_routing_v2/ophost/: OWNERS
src/transformer/moe_init_routing_v2_grad/: moe_init_routing_v2_grad.cpp  moe_init_routing_v2_grad_base.h  moe_init_routing_v2_grad_with_activate.h  moe_init_routing_v2_grad_with_dropless.h  moe_init_routing_v2_grad_with_pos_drop_and_pad_zero.h
src/transformer/moe_token_permute_grad/: moe_token_permute_grad.cpp
src/transformer/moe_token_unpermute/: moe_token_unpermute.h
src/transformer/scaled_masked_softmax_grad_v2/: scaled_masked_softmax_grad_v2_large_headdim.h  scaled_masked_softmax_grad_v2_norm_headdim.h
src/transformer/scaled_masked_softmax_grad_v2/ophost/: CMakeLists.txt  aclnn_scaled_masked_softmax_grad.cpp  aclnn_scaled_masked_softmax_grad.h
src/transformer/scaled_masked_softmax_v2/: scaled_masked_softmax_v2.h
src/transformer/sinkhorn/ophost/: CMakeLists.txt
src/transformer/swin_attention_score_quant/: swin_attention_score_quant.cpp
src/transformer/swin_transformer_ln_qkv_quant/: swin_transformer_ln_qkv_quant.cpp
(+81 files in other folders)
